# app/Models/User.php
@@ -6,6 +6,7 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\Access\Authorizable;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Illuminate\Support\Facades\Storage;
 use Laravel\Sanctum\HasApiTokens;
 use Tymon\JWTAuth\Contracts\JWTSubject;
 
@@ -23,10 +24,13 @@ class User extends Authenticatable implements JWTSubject
      * @var list<string>
      */
     protected $fillable = [
-        'name',
+        'first_name',
+        'last_name',
         'email',
         'password',
+        'profile_photo',
         'phone_number',
+        'location',
         'is_verified'
     ];
 
@@ -39,6 +43,30 @@ class User extends Authenticatable implements JWTSubject
         'password',
         'remember_token',
     ];
+
+    protected static function booted()
+    {
+        static::updating(function ($user) {
+            if (request()->hasFile('profile_photo')) {
+                if ($user->getOriginal('profile_photo')) {
+                    $oldPath = str_replace(asset('storage/'), '', $user->getOriginal('profile_photo'));
+                    Storage::disk('public')->delete($oldPath);
+                }
+    
+                $imagePath = request()->file('profile_photo')->store('users', 'public');
+                $imageUrl = asset('storage/' . $imagePath);
+                $user->profile_photo = $imageUrl;
+            }
+        });
+
+        static::saved(function ($model) {
+            if (request()->has('profile_photo')) {
+                $imagePath = request()->file('profile_photo')->store('users', 'public');
+                $imageUrl = asset('storage/' . $imagePath);
+                $model->profile_photo = $imageUrl;
+            }
+        });
+    }
 
     /**
      * Get the attributes that should be cast.
@@ -67,6 +95,11 @@ class User extends Authenticatable implements JWTSubject
     public function setPasswordAttribute($value)
     {
         $this->attributes['password'] = bcrypt($value);
+    }
+
+    public function getFullNameAttribute()
+    {
+        return ucfirst($this->first_name) . ' ' . ucfirst($this->last_name);
     }
 
     public function products()
